@@ -1,5 +1,10 @@
 2003-11-19  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/sectioning.c (sectioning_underscore): use @settitle value
+	if @top parameter is empty.
+
+2003-11-19  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/xml.c (xml_begin_index): make sure we are removing the
 	label attribute and not something else.
 
